assets/styles.scss
body{
    font-family: 'Quicksand', sans-serif;
    overflow-x:hidden;
}

.top-section{

    background-image: url("../static/img/computers2.jpg");
    padding:0px;
    color:white;
    height: 95vh;
    background-size: cover;
    text-shadow: 2px 2px #000000;
}

.p6{
    padding:100px;
}

.sidenav {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    
    transition: 0.5s; 
}

.typed-element{
    display:unset;
}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 20px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.main {
    width: 100%;
    margin-left: 200px; /* Same as the width of the sidenav */
    font-size: 28px; /* Increased text to enable scrolling */
    padding: 0px;
    transition: margin-left .5s;
}

.lead-consultant{
   border-bottom: solid 1px white;
}

.lead-consultant > a{
    font-size:14px!important;
}

.main-headings{
    background-color: #111111;
    color:white;
    padding-left:20px;
    margin:0px;
    z-index:9999;
}

h2{

    font-weight: 900;
}

.custom-nav-drawer{
    padding: 0px 10px 0px 10px;
    position: fixed;
background:white;
}

@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

@media screen and (max-width: 450px) {
    .p6{padding:0px;}
}

